Stacja paliw - skończone

--- a/zadanie 18 stacja paliw/obliczenia.html
+++ b/zadanie 18 stacja paliw/obliczenia.html
@@ -13,7 +13,16 @@
     <a href="stacja.html"><img src="img/home.png" alt="home"></a>
     <a href="obliczenia.html"><img src="img/znak.png" alt="znak"></a>
 </div>
-<div id="blok-glowny"></div>
+<div id="blok-glowny">
+    <h3>Oblicz koszt paliwa</h3>
+    <label for="rodzaj"> Rodzaj Paliwa ( 1-benzyna, 2-olej napędowy)</label> <br>
+    <input type="number" id="rodzaj"> <br>
+    <label for="ile_litrow">Ile litrów</label> <br>
+    <input type="number" id="ile_litrow"> <br>
+    <button>Oblicz</button>
+    <p id="wynik"></p>
+    <script src="main.js"></script>
+</div>
 <div id="blok-lewy">
     <a href="kwerendy.txt">Pobierz kwerendy</a>
 </div>
