--- a/zadanie 18 stacja paliw/stacja.html
+++ b/zadanie 18 stacja paliw/stacja.html
@@ -13,7 +13,26 @@
     <a href="stacja.html"><img src="img/home.png" alt="home"></a>
     <a href="obliczenia.html"><img src="img/znak.png" alt="znak"></a>
 </div>
-<div id="blok-glowny"></div>
+<div id="blok-glowny">
+    <h3>Godziny otwarcia stacji paliw</h3>
+    <table>
+        <tr>
+            <td>Dzień</td>
+            <td>Od</td>
+            <td>Do</td>
+        </tr>
+        <tr>
+            <td>Pn - Sb</td>
+            <td>6:00</td>
+            <td>24:00</td>
+        </tr>
+        <tr>
+            <td>Nd</td>
+            <td>7:00</td>
+            <td>24:00</td>
+        </tr>
+    </table>
+</div>
 <div id="blok-lewy">
     <a href="kwerendy.txt">Pobierz kwerendy</a>
 </div>
