--- a/Zadanie 25 strona o tematyce świątecznej/index.html
+++ b/Zadanie 25 strona o tematyce świątecznej/index.html
@@ -16,7 +16,6 @@
 	</head>
 
 <body>
-
 	<div id="container">
 	
 		<div id="logo">
@@ -24,49 +23,38 @@
 		</div>
 		
 		<div id="menu">
-			<div class="option">Strona główna</div>
-			<div class="option">Zdjęcia Świąteczne</div>
-			<div class="option">O Mikołaju</div>
+			<div class="option"><a href="index.html">Strona Główna</a></div>
+			<div class="option"><a href="index2.html">Zdjęcia Świąteczne</a></div>
+			<div class="option"><a href="index3.html">O Mikołaju</a></div>
+			<div class="option"><a href="index4.html">Piosenki</a></div>
 			<div style="clear:both;"></div>
 		</div>
 
 		<div id="topbar">
 			<div id="topbarL">
-				<img src="renifer2_1_130x130-removebg-preview.png" />
+				<img src="renifer2_1_130x130-removebg-preview.png" alt="renifer" />
 			</div>
 			<div id="topbarR">
 
-				<span class="bigtitle">Święta to świetny</span>
+				<span class="bigtitle">Święta to magiczny czas, który można spędzić z rodziną i bliskimi </span>
 				<div style="height: 15px;"></div>
-
 			</div>
 			<div id="obrazek">
-				<img src="renifer2_1_130x130-removebg-preview.png" />
+				<img src="renifer2_1_130x130-removebg-preview.png" alt="renifer" />
 			</div>
 			<div style="clear:both;"></div>
 		</div>
 		
-		<div id="sidebar">
-			<div class="optionL">Strona główna</div>
-			<div class="optionL">Dystrybucje</div>
-			<div class="optionL">Instalacja</div>
-			<div class="optionL">Polecenia</div>
-			<div class="optionL">Linus Torvalds</div>
-			<div class="optionL">O projekcie</div>
-		</div>
-		
+
 		<div id="content">
-			<span class="bigtitle">Dlaczego Linux?</span>
+			<span class="bigtitle">Dlaczego Święta Bożego Narodzenia są tak bardzo ważne?</span>
 			
 			<div class="dottedline"></div>
-			
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lacinia mollis odio eu bibendum. Praesent non hendrerit risus. Nulla id semper sem. Mauris risus mauris, ultrices sed ullamcorper sed, vulputate vel nisi. Aliquam augue ante, mattis in pulvinar vitae, ultrices nec leo. Nulla ultricies augue enim, sit amet semper tellus vulputate sit amet. Maecenas tincidunt, ex eu viverra scelerisque, quam lectus auctor nunc, at pretium nibh lacus in ligula. Cras condimentum felis ac aliquet tristique. Sed elementum eu nulla vel rutrum. Cras feugiat nulla non congue malesuada.
-			
-			<br /><br />
-			Cras et nulla vehicula, efficitur enim non, fermentum tortor. Curabitur id elementum leo. Sed eget turpis accumsan dolor mollis imperdiet. Praesent pellentesque laoreet lectus, at commodo magna varius vitae. Aliquam erat volutpat. Curabitur commodo, tortor laoreet sagittis cursus, nulla enim laoreet libero, et egestas risus ante vel orci. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc quis posuere massa, sed sollicitudin lorem. Mauris lacinia, massa efficitur malesuada luctus, arcu ex mattis erat, a venenatis magna risus nec neque. Nulla vulputate nisl urna, quis egestas orci suscipit tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras auctor nec elit at ultricies. Morbi aliquam pharetra diam, vitae porta felis. Pellentesque vel arcu tincidunt, luctus justo quis, ultrices erat. Vivamus efficitur leo vitae dui molestie, eu varius sapien iaculis. In quis pharetra mauris.
-			
-			<br /><br />			
-			Nam ullamcorper turpis non tristique sollicitudin. Etiam id magna lacus. Pellentesque vestibulum ex eget quam consectetur, sit amet luctus erat feugiat. Sed gravida tellus tempus consequat rhoncus. Phasellus lobortis magna et risus pharetra, facilisis blandit sapien tristique. Vivamus aliquam interdum arcu, eget facilisis ante gravida ut. Proin nec nisl ut lacus finibus sagittis id non nibh. Donec volutpat pretium libero. Sed fermentum vel ante vitae mattis. Curabitur porttitor turpis at scelerisque auctor. Sed vitae iaculis risus, ut iaculis nibh.
+			<h2>Święta Bożego Narodzenia to czas, który jest dla nas bezcenny. Spędzamy go z rodziną i bliskimi bawiąc się i świętując.</h2>
+	<h3>Szczególnie ten czas jest ważny dla dzieci ponieważ mogą one sie nauczyć wielu tradycji i tego, że takie święta warto spędzić z rodziną.</h3>
+<h2>Dlatego ważne jest to by je obchodzić. </h2>
+			<h1>Wesołych Świąt!</h1>
+
 		</div>	
 		
 		<div id="footer">
