--- a/Zadanie 25 strona o tematyce świątecznej/index.html
+++ b/Zadanie 25 strona o tematyce świątecznej/index.html
@@ -6,8 +6,8 @@
 	<meta name="description" content="Strona o świętach" />
 	<meta name="keywords" content="Święta Bożego Narodzenia" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="keywords" content="Linux">
-	<meta name="description" content="Strona o Linuxie">
+	<meta name="keywords" content="święta">
+	<meta name="description" content="Strona o Świętach">
 	<meta name="author" content="Dominik Walenczak 1p_2">
 	<meta name="copyright" content="Dominik Walenczak 1p_2">
 	<meta name="robots" content="index,follow">
@@ -32,7 +32,7 @@
 
 		<div id="topbar">
 			<div id="topbarL">
-				<img src="renifer2_1_130x130-removebg-preview.png" alt="renifer" />
+				<img id="obrazek2" src="renifer2.png" alt="renifer" />
 			</div>
 			<div id="topbarR">
 
@@ -40,7 +40,7 @@
 				<div style="height: 15px;"></div>
 			</div>
 			<div id="obrazek">
-				<img src="renifer2_1_130x130-removebg-preview.png" alt="renifer" />
+				<img id="obrazek3" src="renifer2.png" alt="renifer" />
 			</div>
 			<div style="clear:both;"></div>
 		</div>
