--- a/Zadanie 28 zdjęcia pupili/index.html
+++ b/Zadanie 28 zdjęcia pupili/index.html
@@ -2,9 +2,51 @@
 <html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Galeria Zdjęć</title>
+    <link rel="stylesheet" href="styl5.css">
 </head>
 <body>
+<div id="baner"></div>
+<div id="panel-lewy"></div>
+<h2>Kategorie</h2>
+<ul>
+    <li>Psy</li>
+    <li>Koty</li>
+    <li>Gryzonie</li>
+    <li></li>
+    <li></li>
+</ul>
+<div id="panel-prawy">
+    <div id="panel-prawy-górny"></div>
+    <div id="panel-prawy-dolny"></div>
+</div>
+<div id="stopka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
