zadanie 28 bez skryptu

--- a/Zadanie 28 zdjęcia pupili/psy.html
+++ b/Zadanie 28 zdjęcia pupili/psy.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="author" content="Dominik Walenczak">
+    <title>Galeria Zdjęć</title>
+    <link rel="stylesheet" href="styl5.css">
 </head>
 <body>
+<div id="baner">
+    <h1>Zdjęcia psów</h1>
+</div>
+<div id="panel-lewy">
+    <h2>Kategorie</h2>
+    <ul>
+        <li><a href="psy.html">Psy</a></li>
+        <li><a href="koty.html">Koty</a></li>
+        <li>Gryzonie</li>
+        <li>Jaszczurki</li>
+        <li>Inne zdjęcia</li>
+    </ul>
+    <h4><a href="index.html">Powrót do strony głównej</a></h4>
+</div>
+
+
+
+<div id="panel-prawy">
+    <div id="panel-prawy-gorny">
+        <h1>Wybierz zdjęcie</h1>
+        <img src="img/pies1.jpg" alt="pies1">
+        <img src="img/pies2.jpg" alt="pies2">
+        <img src="img/pies3.jpg" alt="pies3">
+    </div>
+    <div id="panel-prawy-dolny">
+       <p> <img src="img/pies1.jpg" alt="pies-duzy"></p>
+    </div>
+</div>
+<div id="stopka">
+    Galerię zdjęć zaprojektował: <i>Dominik Walenczak 1p_2</i>
+</div>
 
 </body>
 </html>
