--- a/Zadanie 28 zdjęcia pupili/index.html
+++ b/Zadanie 28 zdjęcia pupili/index.html
@@ -2,51 +2,37 @@
 <html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Dominik Walenczak">
     <title>Galeria Zdjęć</title>
     <link rel="stylesheet" href="styl5.css">
 </head>
 <body>
-<div id="baner"></div>
-<div id="panel-lewy"></div>
-<h2>Kategorie</h2>
-<ul>
-    <li>Psy</li>
-    <li>Koty</li>
-    <li>Gryzonie</li>
-    <li></li>
-    <li></li>
-</ul>
-<div id="panel-prawy">
-    <div id="panel-prawy-górny"></div>
-    <div id="panel-prawy-dolny"></div>
+<div id="baner">
+    <h1>Zdjęcia naszych pupilów</h1>
 </div>
-<div id="stopka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<div id="panel-lewy">
+    <h2>Kategorie</h2>
+    <ul>
+        <li><a href="psy.html">Psy</a></li>
+        <li><a href="koty.html">Koty</a></li>
+        <li>Gryzonie</li>
+        <li>Jaszczurki</li>
+        <li>Inne zdjęcia</li>
+    </ul>
+    <h4><a href="index.html">Powrót do strony głównej</a></h4>
+</div>
+<div id="panel-prawy">
+    <div id="panel-prawy-gorny">
+        <h1> Zdjęcie tygodnia</h1>
+        <p>Azor, 4 miesiące</p>
+    </div>
+    <div id="panel-prawy-dolny">
+        <p><img src="img/pies2.jpg" alt="Azor"></p>
+    </div>
+</div>
+<div id="stopka">
+    Galerię zdjęć zaprojektował: <i>Dominik Walenczak 1p_2</i>
+</div>
 
 </body>
 </html>
