--- a/CSS/Zadanie 07 - Pseudoklasy i pseudolelementy/index.html
+++ b/CSS/Zadanie 07 - Pseudoklasy i pseudolelementy/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h1>Dominik Walenczak 1p_2</h1>
 <p class="duzalitera">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, nobis.</p> <br>
 <p class="linia">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, ut?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesci Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, vero. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, veritatis. </p> <br>
 <p class="przed">raz</p>
@@ -17,18 +18,17 @@
 
 <p class="hover">Lorem ipsum dolor amet, consectetur adipisicing elit. A fugit ipsam nam optio quae quas qui repudiandae. Fugiat, minus, placeat.</p>
 <p ><a href="https://politechniczna.glogow.pl/%22%3EStrona" class="link">klikaj</a></p> <br>
-<p ><a href="https://politechniczna.glogow.pl/%22%3EStrona" class="visited">klikaj</a></p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, placeat!</p> <br>
+<p ><a href="https://politechniczna.glogow.pl/%22%3EStrona" class="visited">klikaj</a></p><br>
 <button class="przycisk">klikaj tu </button>
 <form>
-
-  <label>imię <input name="firstName" type="text"></label>
-  <label>Flavor:
+<p>Jaki chcesz smak lodów?</p>
+  <label>imię: <input name="firstName" type="text"></label>
+  <label>Smak:
     <select name="flavor">
-      <option>Cherry</option>
-      <option>Green Tea</option>
-      <option>Moose Tracks</option>
-      <option>Mint Chip</option>
+      <option>Wiśnia</option>
+      <option>Czekolada</option>
+      <option>Truskawka</option>
+      <option>Cytryna</option>
     </select>
   </label>
 </form>
