--- a/Zadanie 31 - Menu w CSS/Menu CSS source/index.html
+++ b/Zadanie 31 - Menu w CSS/Menu CSS source/index.html
@@ -13,13 +13,48 @@
 
 <div id='cssmenu'>
     <ul>
-        <li class='active'><a href='#'>Home</a></li>
-        <li><a href='#'>Products</a></li>
-        <li><a href='#'>Company</a></li>
-        <li><a href='#'>Contact</a></li>
-        <li><a href='#'>Contact</a></li>
+        <li class='active'><a href='#container'>Start</a></li>
+        <li><a href='#Produkty'>Produkty</a></li>
+        <li><a href='#firma'>Firma</a></li>
+        <li><a href='#kontakt'>Kontakt</a></li>
+
     </ul>
 </div>
-
+<div id="container">
+    <hr>
+    <div id="box">
+        <hr>
+        <img src="img/start.jpg" alt="Obrazek Start">
+        <h2>Start</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam blanditiis corporis debitis dicta dolore error et facilis fuga fugiat harum iusto magni minima necessitatibus nulla odit, perferendis possimus quis ratione recusandae repellat saepe suscipit velit. Dignissimos ducimus eius explicabo laborum, minus nemo nulla quia, quidem quod ratione rerum ullam.</p>
+    </div>
+</div>
+<div id="Produkty">
+    <hr>
+    <div id="produkty1">
+        <hr>
+        <img src="img/produkty.jpg" alt="produkty" style="width: 1920px;height:1080px ">
+        <h2>Produkty</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, maxime, veritatis! Cum eos eveniet exercitationem recusandae repudiandae. Consectetur id ipsam quaerat sapiente? Alias optio possimus quos vitae! Blanditiis dicta dignissimos incidunt ipsam itaque reiciendis repudiandae rerum soluta, totam. Distinctio, voluptates?</p>
+    </div>
+</div>
+<div id="firma">
+    <hr>
+    <div id="firma1">
+        <hr>
+        <img src="img/firma.jpg" alt="firma" style="width: 1920px;height:1080px ">
+        <h2>Firma</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequuntur culpa eos eum facere harum iste itaque libero maiores, maxime odio perspiciatis ratione, saepe, sint sit! Amet cumque debitis doloremque eligendi inventore itaque maiores, molestias quas quibusdam repellat temporibus voluptas voluptatibus. Animi aut corporis, debitis distinctio, exercitationem harum illo neque nulla officia, quas sed voluptatem.</p>
+    </div>
+</div>
+<div id="kontakt">
+    <hr>
+    <div id="kontakt1">
+        <hr>
+        <img src="img/kontakt.jpg" alt="kontakt">
+        <h2>Kontakt</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam animi aperiam eaque excepturi fuga illo in iure labore laborum laudantium libero modi natus nemo nihil nisi, nostrum numquam officia pariatur provident quam quasi repellendus repudiandae sed similique tempore voluptatibus!</p>
+    </div>
+</div>
 </body>
 <html>
