--- a/Zadanie 35/index.html
+++ b/Zadanie 35/index.html
@@ -5,7 +5,7 @@
   <meta name="copyright" content="Dominik Walenczak 1p_2">
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Retrogranie</title>
+  <title>Jak stworzyć dobrą stronę internetową?</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
@@ -18,30 +18,25 @@
 <div class="wrapper">
   <div class="header">
 
-    <div class="logo">
-      <img src="img/superstrona-removebg-preview.png" style="float: left;"/>
-      <span >Jak stworzyć dobrą stronę internetową?</span>
+    <div id="logo">
+      <img src="img/superstrona-removebg-preview.png" style="float: left ;width: 200px"; height="150px" />
+      <img src="img/superstrona-removebg-preview.png" style="float: right ;width: 200px"; height="150px" />
+      <p style="text-align: center;">Jak stworzyć dobrą stronę internetową?</p>
       <div style="clear:both;"></div>
     </div>
   </div>
   <div class="nav">
     <ol>
-      <li><a href="#">Strona główna</a></li>
-      <li><a href="#">Klasyki NES</a>
+      <li><a href="#logo">Strona główna</a></li>
+      <li><a href="#">Wygląd</a>
         <ul>
-          <li><a href="#">Contra</a></li>
-          <li><a href="#">Mario Bros</a></li>
-          <li><a href="#">Duck Tales</a></li>
-          <li><a href="#">Legend of Zelda</a></li>
+          <li><a href="#1">Kolor</a></li>
+          <li><a href="#2">Czcionka</a></li>
+          <li><a href="#3">Grafika</a></li>
+
         </ul>
       </li>
-      <li><a href="#">Gry filmowe</a>
-        <ul>
-          <li><a href="#">Home Alone</a></li>
-          <li><a href="#">Dick Tracy</a></li>
-          <li><a href="#">The Simpsons</a></li>
-          <li><a href="#">Top Gun</a></li>
-        </ul>
+      <li><a href="#Organizacja">Organizacja</a>
       </li>
       <li><a href="#">Bijatyki</a>
         <ul>
@@ -64,18 +59,20 @@
 
   </div>
 
-  <div class="content">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget rhoncus mi, in vestibulum lorem. Nulla urna mauris, egestas nec erat vel, tempus ullamcorper dolor. Maecenas eu mattis arcu. Aliquam dapibus quis risus eget consequat. Curabitur eu convallis urna, vitae scelerisque est. Nunc eget posuere urna. Nulla facilisi. Phasellus blandit eleifend aliquet. Curabitur porttitor pharetra pretium. Nam ac eros laoreet, consequat felis at, auctor metus.</p>
+  <div class="Wyglad">
+    <h2>Wygląd</h2>
+<p>Za każdym razem, gdy podchodzisz do dużego projektu internetowego, pamiętaj o tym, co następuje: Większość odwiedzających nie przejmuje się tym, jak wygląda Twoja strona. Twoi goście nie przychodzą na Twoją stronę, aby ocenić, jak genialny jest Twój projekt. Przychodzą na nią, ponieważ chcą wykonać określoną czynność lub dostać określone informacje. Jeśli dodajesz do swojej strony niepotrzebne elementy projektu-elementy, które nie działają, utrudniasz użytkownikom osiągnięcie tego, po co przyszli na Twoją stronę. Z punktu widzenia użyteczności i doświadczenia użytkownika, prostota jest Twoim najlepszym przyjacielem. Aspekt ten może być realizowany na różne sposoby. Oto kilka przykładów:</p>
+    <ul>
+    <li id="1"><i>Kolory: Nie używaj zbyt wielu. Podręcznik interakcji między człowiekiem i komputerem (Handbook of Computer-Human Interaction) zaleca używanie maksymalnie pięciu (plus/minus dwa) różnych kolorów w projekcie strony internetow</i></li>
+      <li id="2"><i>Fonty: Czcionki na Twojej stronie internetowej powinny być łatwe do odczytania i, jak w przypadku kolorów, nie należy używać zbyt wielu różnych czcionek. Zazwyczaj zaleca się używanie maksymalnie trzech różnych czcionek w maksymalnie trzech różnych rozmiarach.</i></li>
+      <li id="3"><i> Grafika: Grafiki należy używać tylko wtedy, gdy pomagają one użytkownikom w wykonaniu konkretnej akcji lub gdy posiadają specjalną funkcję (nie należy wstawiać grafiki, tylko losowo w dowolnym miejscu).</i></li>
+    </ul>
 
-    <p>Etiam condimentum sed lectus at laoreet. Fusce pellentesque porta purus a venenatis. Quisque erat augue, malesuada nec ultrices vitae, consequat sed metus. Donec at ipsum viverra mauris feugiat euismod. Morbi ultrices tellus libero, et gravida tortor laoreet eget. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi auctor interdum ornare. Praesent vel urna volutpat, accumsan erat at, pharetra urna. Pellentesque egestas sodales nibh vitae sodales. Suspendisse laoreet risus neque, viverra dictum leo condimentum vitae. Sed sem diam, blandit eu vestibulum in, tempor nec lacus. Nullam lacinia commodo elit, sed euismod leo. Suspendisse porttitor sem mi, fringilla viverra diam tincidunt ut.</p>
-
-    <p>In dui turpis, varius nec neque id, mollis cursus neque. Pellentesque eget laoreet nulla. Nam lectus ex, vehicula ut euismod et, rhoncus in lectus. Donec luctus, sapien a venenatis vulputate, sapien ante condimentum lectus, ut molestie enim velit vitae magna. Suspendisse varius neque pulvinar enim ornare, nec lobortis enim lobortis. Ut eu ex neque. Vestibulum feugiat ligula et arcu rhoncus, quis maximus mauris pellentesque. Vivamus fermentum ultrices lacus vel vulputate. Morbi ultrices dolor nulla, ac lobortis nisl vestibulum sed. Vestibulum iaculis, lectus eget condimentum sodales, lorem nulla fermentum tellus, volutpat congue lacus dolor et quam. Phasellus ac risus blandit nisi rutrum suscipit non eu mauris. Vestibulum fringilla non neque vitae vestibulum.</p>
-
-    <p>Fusce quis vehicula purus, ut fermentum quam. Suspendisse cursus dui ac est convallis, sit amet egestas lorem sodales. Praesent nec nunc mattis, hendrerit mauris quis, dignissim nisi. Pellentesque semper faucibus urna vel tempus. Suspendisse egestas lacus ornare ligula mattis, et pulvinar urna sodales. Suspendisse tristique eget lacus sit amet dapibus. Nam quis imperdiet velit. Vestibulum consectetur rutrum tortor, sit amet fringilla nisi rhoncus id. Aenean sit amet odio elit. Nulla orci quam, eleifend quis sapien sed, vestibulum elementum urna. Sed dapibus ligula vitae turpis bibendum, in tempus magna bibendum. Aenean ut purus diam. Praesent porta velit ut dui fringilla egestas. Donec dignissim non sapien at imperdiet. Quisque bibendum massa ligula, vel elementum eros iaculis quis. Maecenas velit nisl, imperdiet vitae dui sed, convallis placerat enim.</p>
-
-    <p>Nunc mollis, massa scelerisque elementum condimentum, mauris ipsum accumsan purus, in semper leo erat vel turpis. Etiam varius feugiat diam eu sagittis. Curabitur dapibus sollicitudin dictum. In tincidunt at mauris vel dictum. Vivamus id imperdiet sem. Nam viverra ac massa ac ultricies. Nam condimentum commodo faucibus. Integer eget facilisis massa, sit amet vulputate purus. Duis in eros pulvinar eros porttitor pellentesque non volutpat dui. Nam laoreet scelerisque leo, accumsan porttitor tortor dignissim tempus. Nunc sit amet rutrum lorem. Cras malesuada risus sit amet aliquet vestibulum. Donec tellus nibh, pretium sed diam vitae, aliquet tempus risus.</p>
   </div>
-
+<div id="Organizacja">
+  <h2>Organizacja elementów</h2>
+  <p>Zasada hierarchii wizualnej jest ściśle związana z zasadą prostoty. Polega na aranżowaniu i organizowaniu elementów strony internetowej w sposób, który w naturalny, intuicyjny sposób doprowadzi odwiedzających stronę do najważniejszych jej elementów. Pamiętaj, że jeśli chodzi o <strong >optymalizację użyteczności</strong> i pozytywnych wrażeń użytkownika, celem jest nakłonienie ludzi do wykonywania określonych czynności w sposób, który wydaje im się naturalny i wygodny. Na przykład, dostosowując pozycję, kolor lub rozmiar niektórych elementów, możesz ustrukturyzować swoją stronę w sposób, który w naturalny sposób przyciąga odwiedzających do jej najważniejszych elementów.</p>
+</div>
 
 
   <div class="footer"> <p>Zespół Szkół Politechnicznych w Głogowie<br> &copy;2022 Dominik Walenczak 1p_2</p></div>
