strona o tym jak tworsyc strone

--- a/Zadanie 35/index.html
+++ b/Zadanie 35/index.html
@@ -38,23 +38,12 @@
       </li>
       <li><a href="#Organizacja">Organizacja</a>
       </li>
-      <li><a href="#">Bijatyki</a>
-        <ul>
-          <li><a href="#">Mortal Kombat</a></li>
-          <li><a href="#">Nekketsu K.D.</a></li>
-          <li><a href="#">Double Dragon</a></li>
-          <li><a href="#">Turtles T.</a></li>
-        </ul>
+      <li><a href="#nawigacja">Nawigacja</a>
       </li>
-      <li><a href="#">Gry sportowe</a>
-        <ul>
-          <li><a href="#">Goal 3</a></li>
-          <li><a href="#">Excitebike</a></li>
-          <li><a href="#">Ike Ike Hockey</a></li>
-          <li><a href="#">Tennis</a></li>
-        </ul>
+      <li><a href="#spojnosc">Spójność</a>
       </li>
-      <li><a href="#">O autorach</a></li>
+      <li><a href="#dostepnosc">Dostępność</a></li>
+      <li><a href="#">Konwencje</a></li>
     </ol>
 
   </div>
@@ -73,8 +62,43 @@
   <h2>Organizacja elementów</h2>
   <p>Zasada hierarchii wizualnej jest ściśle związana z zasadą prostoty. Polega na aranżowaniu i organizowaniu elementów strony internetowej w sposób, który w naturalny, intuicyjny sposób doprowadzi odwiedzających stronę do najważniejszych jej elementów. Pamiętaj, że jeśli chodzi o <strong >optymalizację użyteczności</strong> i pozytywnych wrażeń użytkownika, celem jest nakłonienie ludzi do wykonywania określonych czynności w sposób, który wydaje im się naturalny i wygodny. Na przykład, dostosowując pozycję, kolor lub rozmiar niektórych elementów, możesz ustrukturyzować swoją stronę w sposób, który w naturalny sposób przyciąga odwiedzających do jej najważniejszych elementów.</p>
 </div>
+<div id="nawigacja">
+  <h2>Łatwa Nawigacja</h2>
+  <p>Intuicyjna nawigacja witryny pomaga odwiedzającym szybko znaleźć to, czego szukają. Najlepiej byłoby, gdyby odwiedzający odwiedzili Twoją witrynę i nie musieli zastanawiać się, czy, gdzie i jak pójść dalej. Przejście z punktu A do punktu B na Twojej stronie musi być łatwe. Poniższe wskazówki pomogą zoptymalizować nawigację po stronie:</p>
+  <ul>
+    <li><i>Struktura Twojej głównej nawigacji powinna być prosta (najlepiej umieszczona u góry strony).</i></li>
+    <li><i>Stopka Twojej strony może również zawierać funkcję nawigacji.</i></li>
+    <li><i>Na każdej stronie z wyjątkiem strony głównej, użyj okruszków (breadcrumbs), aby odwiedzający wiedzieli, gdzie się znajdują i jak się tam dostali.</i></li>
+    <li><i>U góry strony powinna znajdować się funkcja wyszukiwania, dzięki której użytkownicy będą mogli łatwo wyszukiwać hasła.</i></li>
+    <li><i>Zbyt wiele opcji nawigacyjnych przynosi efekt przeciwny do zamierzonego.</i></li>
+    <li><i>Nie idź zbyt głęboko z kategoriami. W większości przypadków najlepiej jest, jeśli nawigacja nie jest głębsza niż trzy poziomy.</i></li>
+  </ul>
+  <p>
+    Jeszcze jedna wskazówka:, gdy już ustalisz, jak powinna wyglądać nawigacja strony (powyżej), trzymaj się jej. Opisy i ich pozycja powinny wyglądać tak samo na każdej stronie witryny.</p>
+</div>
+<div id="spojnosc">
+  <h2>Spójność</h2>
+  <p>Nawigacja nie tylko powinna być spójna, ale ogólny wygląd każdej kolejno odwiedzanej podstrony powinien być spójny. Tła, schematy kolorów, czcionki, a także styl w tekstach to aspekty, w których jednolita konstrukcja ma pozytywny wpływ na łatwość obsługi i wygodę użytkownika. Nie chcemy powiedzieć, że wszystkie strony powinny mieć identyczny układ. Powinieneś stworzyć różne układy dla określonych typów stron (na przykład inny dla stron docelowych, trochę inny dla stron informacyjnych i tak dalej). Powinieneś jednak konsekwentnie używać tych układów, aby odwiedzający mogli łatwo zobaczyć, jakie informacje im podasz i gdzie. Nie przesadzaj. Wyobraź sobie, jak czułbyś się, jako gość Twojej strony, gdyby każda podstrona pomocy miała inny, układ, który nie jest spójny z resztą stron.
+  </p>
+</div>
+  <div id="dostepnosc">
+    <h2>Dostępność</h2>
+    <p>Według ostatnich badań amerykańskiej firmy ComScore wykorzystanie tabletów do prowadzenia działalności online w USA wzrosło o 30%. Korzystanie z Internetu ze smartfonów wzrosło o 78% w tym samym okresie. Jak z tego nauka? Wnioski można wyciągnąć samemu. Aby <strong>strona internetowa</strong> była przyjazna dla użytkownika, witryna musi być zgodna z różnymi urządzeniami (ich systemami operacyjnymi i przeglądarkami) używanymi przez użytkowników. W szerszym znaczeniu oznacza to inwestowanie w wysoce elastyczną strukturę strony internetowej, na przykład w responsywny projekt oraz standardy tworzenia stron internetowych. W responsywnej stronie www zawartość i jej format są automatycznie dostosowywane do wielkości urządzenia, z którego korzysta użytkownik.
+    </p> <br>
+    <p>W ostatecznym rozrachunku ważniejsze jest, aby Twoja witryna zapewniała satysfakcję użytkownikom na różnych platformach, a nie to, by wyglądała na nich identycznie. Tylko Ty to widzisz, Twoi goście nie. Może to oznaczać konieczność trzymania się konwencji projektowych specyficznych dla platformy, a nie próbowanie umieszczania unikalnych elementów projektu na Twojej stronie, które mogą być obce dla użytkowników na niektórych platformach. I skoro już tu jesteśmy, dochodzimy do następnej zasady...</p>
+  </div>
+  <div id="konwencje">
+    <h2>Konwencje</h2>
+    <p>Istnieją pewne konwencje <strong>projektowania stron internetowych</strong>, które stały się znane większości użytkowników Internetu na przestrzeni lat. Należą do nich na przykład:</p>
+  <ul>
+    <li>Główna nawigacja strony w górę lub w lewo.</li>
+    <li>Logo w lewym górnym rogu (lub środku) na stronie.</li>
+    <li>Logo, które można kliknąć, i przenosi użytkownika z powrotem na stronę początkową.</li>
+    <li>Łącza, które zmieniają kolor lub wygląd, gdy przesuniesz nad nim wskaźnik myszy.</li>
+  </ul>
 
 
+  </div>
   <div class="footer"> <p>Zespół Szkół Politechnicznych w Głogowie<br> &copy;2022 Dominik Walenczak 1p_2</p></div>
 </div>
 
