koniec strony o stronie

--- a/Zadanie 35/index.html
+++ b/Zadanie 35/index.html
@@ -43,7 +43,9 @@
       <li><a href="#spojnosc">Spójność</a>
       </li>
       <li><a href="#dostepnosc">Dostępność</a></li>
-      <li><a href="#">Konwencje</a></li>
+      <li><a href="#konwencje">Konwencje</a></li>
+      <li><a href="#wiarygodnosc">Wiarygodność</a></li>
+      <li><a href="#najwazniejsze">Najważniejsze</a></li>
     </ol>
 
   </div>
@@ -96,8 +98,22 @@
     <li>Logo, które można kliknąć, i przenosi użytkownika z powrotem na stronę początkową.</li>
     <li>Łącza, które zmieniają kolor lub wygląd, gdy przesuniesz nad nim wskaźnik myszy.</li>
   </ul>
+    <p>Aby zapewnić odwiedzającym jak najlepsze wrażenia w Twojej witrynie, powinieneś trzymać się doświadczeń, które odwiedzający już znają. To prawdziwa zaleta. Możesz użyć tych informacji, aby ułatwić nawigację w witrynie.
 
-
+    </p>
+  </div>
+  <div id="wiarygodnosc">
+    <h2>Wiarygodność</h2>
+    <p>Konwencje projektowania stron internetowych, więc elementy projektu/strategie, które są już znane odwiedzającym, mogą zawsze pomóc. Aby nadać Twojej stronie internetowej większą wiarygodność. Jeśli chcesz utworzyć stronę, która oferuje swoim gościom najlepsze doświadczenia użytkownika, wiarygodność (trust) nie jest to bez znaczenia.</p>
+    <br>
+    <p>Jednym z najlepszych sposobów, w jaki można poprawić wiarygodność swojej strony, jest uczciwość. Opisać produkt lub usługę w rzetelny i jasny sposób. Niech Twoi goście nie muszą grzebać w dziesiątkach podstron, aby znaleźć to, co naprawdę oferujesz. Wystarczy być uczciwym i poświęcić swojej ofercie poczesne miejsce na stronie, gdzie można dokładnie i wyczerpująco opisać Twój cel/produkt/ofertę/propozycje.</p>
+    <br>
+    <p>Kolejna wskazówka dotycząca poprawy wiarygodności: Strona z cenami. Pokusa, aby zachęcić potencjalnych klientów do skontaktowania się z Tobą, aby dowiedzieć się więcej na temat Twoich cen, jest zrozumiała i duża. Jeśli jednak ceny będą wyświetlane otwarcie na stronie internetowej, Twoja firma będzie bardziej wiarygodna i poważna. Ważnym elementem, który powinna zawierać strona internetowa to
+      <a style="color: #292929" href="https://www.web-development.com.pl/pl/blog/chrome-zapowiada-zmiany">certyfikat SSL</a>.</p>
+  </div>
+  <div id="najwazniejsze">
+    <h2>Użytkownik jest najważniejszy</h2>
+    <p>Najważniejsze jest to, że użyteczność i wrażenia użytkownika zależą od preferencji użytkowników. Spójrz na to tak:, dla kogo <strong>projektujesz stronę</strong>? Dla Twoich użytkowników. Wymienione tu zasady, są dobrym punktem wyjścia. Jednak w miarę doskonalenia witryny jeszcze ważniejsze jest ich ciągłe udoskonalanie, uruchamianie testów, uzyskiwanie opinii i wprowadzanie zmian na podstawie tych wyników.</p>
   </div>
   <div class="footer"> <p>Zespół Szkół Politechnicznych w Głogowie<br> &copy;2022 Dominik Walenczak 1p_2</p></div>
 </div>
