--- a/Zadanie E01JS - usługi informatyczne - zielony/kontakt.html
+++ b/Zadanie E01JS - usługi informatyczne - zielony/kontakt.html
@@ -17,11 +17,11 @@
     <a href="index.html">O nas</a>
     <a href="kontakt.html">Kontakt</a>
   </div>
-  <div id="blok1"></div>
-  <div id="blok2">
-    <h2>Formularz kontaktowy
+  <div id="blok1" class="ok1"></div>
+  <div id="blok2" class="ok1">
+    <h3>Formularz kontaktowy</h3>
       <table>
-        <form >
+        <form>
           <tr>
             <td>Imie:</td>
             <td><input type="text"></td>
@@ -36,23 +36,29 @@
           </tr>
           <tr>
             <td>Usługa</td>
-            <td><textarea></textarea></td>
+            <td><select>
+              <option>naprawa komputera</option>
+              <option>odzyskiwanie danych</option>
+              <option>problemy z oprogramowaniem</option>
+              <option>konfiguracja sieci LAN</option>
+              <option>inne</option>
+            </select></td>
           </tr>
           <tr>
             <td></td>
-            <td><input type="checkbox">Zapoznałam/em się z regulaminem</td>
+            <td><input type="checkbox">Wyślij kopię wiadomości</td>
           </tr>
           <tr>
             <td></td>
-            <td><input type="reset">
-              <input type="submit">
+            <td><input type="reset" class="reset">
+              <input type="submit" class="submit">
             </td>
 
           </tr>
         </form>
       </table>
   </div>
-  <div id="blok3"></div>
+  <div id="blok3" class="ok1"></div>
   <div id="stopka">
     <p>Autor strony: Dominik Walenczak 1p_2</p>
   </div>
