--- a/Zadanie E01JS - usługi informatyczne - zielony/index.html
+++ b/Zadanie E01JS - usługi informatyczne - zielony/index.html
@@ -10,16 +10,20 @@
 </head>
 <body>
 </div>
-<div id="menu">
-  <a href="index.html">O nas</a>
-  <a href="kontakt.html">Kontakt</a>
-</div>
-<div id="blok1">
+<div id="kontener">
+  <div id="blokbanera">
+    <img src="animacja.gif" alt="animacja gif">
+  </div>
+  <div id="menu">
+    <a href="index.html">O nas</a>
+    <a href="kontakt.html">Kontakt</a>
+  </div>
+<div id="blok1" class="ok1">
   <h2>Kim jesteśmy?</h2>
   <p>Jesteśmy firmą z wieloletnim doświadczeniem w zakresie IT.</p>
 
 </div>
-<div id="blok2">
+<div id="blok2" class="ok1">
   <h2>Co robimy?</h2>
   <ul>
     <li>naprawiamy komputery stacjonarne i laptopy</li>
@@ -29,7 +33,7 @@
     <li> i wiele więcej</li>
   </ul>
 </div>
-<div id="blok3">
+<div id="blok3" class="ok1">
   <h2>Co nas cechuje?</h2>
   <p>Doświadczenie, niezawodność, konkurencyjne ceny.</p>
 </div>
