--- a/Klasa 2/T 00 Zadania/T 02 Zasady programowania/index.html
+++ b/Klasa 2/T 00 Zadania/T 02 Zasady programowania/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -11,10 +11,13 @@
   <h2>Autor: Dominik Walenczak 2p_2</h2>
 </div>
 <div id="container">
+    <br>
 <p><b>Język programowania</b> służy do tworzenia programów komputerowych, których zadaniem jest przetwarzanie danych, wykonywanie obliczeń i algorytmów. Może zawierać
     konstrukcje składniowe do manipulowania strukturami danych i zarządzania przepływem sterowania. Niektóre języki programowania mają specyfikację swojej składni
     i semantyki, inne zdefiniowane są jedynie przez oficjalne implementacje.</p>
-    <p>Elementy języka:</p>
+    <br>
+    <h2>Elementy języka:</h2>
+    <br>
     <ul>
         <li><b>Składnia</b> — zbiór reguł opisujących sposób definiowania struktur danych, rodzaje
             dostępnych słów kluczowych i symboli oraz zasady, według których symbole mogą
@@ -24,7 +27,9 @@
         <li><b>Typy danych</b> — dostępne typy danych, ich właściwości oraz operacje, które mogą
             być wykonane na wartościach danego typu</li>
     </ul>
-    <h3>Paradygmaty programowania</h3>
+    <br>
+    <h2>Paradygmaty programowania</h2>
+    <br>
     <p>
         <b>Paradygmat programowania</b> to pewien wzorzec określający sposób pisania i wykonania
         programu komputerowego. Języki programowania korzystają z różnych paradygmatów.
@@ -37,7 +42,78 @@
         <li>Funkcyjne</li>
         <li>Uogólnione</li>
     </ul>
-
+    <br>
+    <h2>Proste algorytmy</h2>
+    <br>
+    <p><b>Algorytm</b> to zestaw ściśle określonych czynności prowadzących do wykonania pewnego
+        zadania. Określa sposób rozwiązania problemu i ma zastosowanie w różnych dziedzinach. Języki programowania to narzędzia, które bardzo dobrze nadają się do zapisu
+        algorytmów. Aby napisać dobry program komputerowy, należy opracować skuteczny
+        algorytm i zdefiniować dla niego odpowiednie struktury danych.</p>
+    <br>
+</div>
+<h2>Reprezentacja algorytmów</h2>
+<br>
+<p class="środek"><b>Schematy blokowe</b></p>
+<div id="tabelka">
+    <table>
+        <th>
+            Symbol
+        </th>
+        <th>
+            Opis
+        </th>
+        <tr>
+            <td><img src="img/bombastart.png" alt="start"></td>
+            <td>Początek algorytmu, start programu. Od tego miejsca rozpoczyna
+                się wykonywanie operacji.</td>
+        </tr>
+        <tr>
+            <td><img src="img/bombastop.png" alt="stop"></td>
+            <td>Koniec algorytmu, zakończenie programu. W tym miejscu następuje zakończenie wykonywania operacji.</td>
+        </tr>
+        <tr>
+            <td><img src="img/bombastrzala.png" alt="strzałka"></td>
+            <td>Połączenie między blokami. Wskazuje kolejność wykonywania
+                operacji.</td>
+        </tr>
+        <tr>
+            <td><img src="img/instru.png" alt="instrukcja"></td>
+            <td>Wykonanie operacji, blok obliczeniowy. Wewnątrz tego symbolu
+                znajdują się operacje do wykonania.</td>
+        </tr>
+        <tr>
+            <td><img src="img/bombawcztyajca.png" alt="wczytaj"></td>
+            <td>Wprowadzanie danych. Wewnątrz tego symbolu określamy dane
+                wejściowe, które muszą zostać wczytane.</td>
+        </tr>
+        <tr>
+           <td><img src="img/bombawyswietlajaca.png" alt="wyswietl"></td>
+            <td>Wyprowadzanie danych. Wewnątrz tego symbolu określamy
+                dane wyjściowe, które powinny zostać wyprowadzone jako
+                wynik.</td>
+        </tr>
+        <tr>
+            <td><img src="img/bombawarunkowa.png" alt="warunek"></td>
+            <td>Warunek logiczny, blok decyzyjny. Umożliwia tworzenie rozgałęzień w algorytmie. Jeżeli warunek jest spełniony, to następuje
+                przejście do gałęzi oznaczonej „Tak”, w przeciwnym razie następuje przejście do gałęzi oznaczonej „Nie”.</td>
+        </tr>
+        <tr>
+            <td><img src="img/boxik.png" alt="box"></td>
+            <td>Proces wstępnie zdefiniowany. Symbol ten oznacza dołączenie
+                podprogramu.</td>
+        </tr>
+        <tr>
+            <td><img src="img/lacznikokk.png" alt="lacznik"></td>
+            <td>Łącznik. Odwołanie na stronie. Służy do oznaczenia miejsc
+                łączenia schematu, na przykład gdyby linie łączące na schemacie
+                musiały się krzyżować.</td>
+        </tr>
+        <tr>
+            <td><img src="img/lacznikmiedzystronic.png" alt="costam"></td>
+            <td>Łącznik międzystronicowy. Służy do oznaczenia miejsc łączenia
+                schematu, gdy nie mieści się on na jednej stronie.</td>
+        </tr>
+    </table>
 </div>
 </body>
 </html>
