--- a/Klasa 2/JavaScript/Zadania 00/Z 02 średnia arytmetyczna/index.html
+++ b/Klasa 2/JavaScript/Zadania 00/Z 02 średnia arytmetyczna/index.html
@@ -25,7 +25,8 @@
 
     let suma = a+b+c+d;
     let srednia = suma/4;
-    document.write("a wynosi: "+a+ "<br> b wynosi: "+b+"<br> c wynosi: "+c+"<br> d wynosi: "+d+"<br> Suma wynosi: "+suma+" <br>Srednia wynosi: "+srednia)
+    document.write("a wynosi: "+a+ "<br> b wynosi: "+b+"<br> c wynosi: "+c+"<br> d wynosi: "+d+"<br><b>Suma wynosi: "+suma+ "</b> <b><br>Srednia wynosi: "+srednia+ "</b> ")
+    document.write("<b><br>Srednia zaokrąglona wynosi: "+srednia.toFixed(2)+ "</b> ")
     console.log(suma)
   </script>
 </section>
