--- a/Klasa 2/JavaScript/Zadania 00/Z 05 Działania matematyczne/index.html
+++ b/Klasa 2/JavaScript/Zadania 00/Z 05 Działania matematyczne/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 <header>
-  <h1>Zadanie 04</h1>
+  <h1>Zadanie 05</h1>
   <h2>Autor: Dominik Walenczak 2p/2</h2>
-  <p>Napisz program, który oblicza i wyświetla iloraz 2 liczb rzeczywistych z dokładnością do dwóch miejsc po przecinku.</p>
+  <p>Napisz program, który oblicza sumę, różnicę, iloczyn i iloraz (całkowity - jak w C++) liczb całkowitych A i B.</p>
   <hr>
 </header>
 <section>
-  <label for="liczba1">Podaj dzielną: </label>
-  <input type="number" id="liczba1">
-  <label for="liczba2">Podaj dzielnik: </label>
-  <input type="number" id="liczba2">
+  <label for="A">Podaj liczbe A: </label>
+  <input type="number" id="A">
+  <label for="B">Podaj liczbe B: </label>
+  <input type="number" id="B">
   <button>Oblicz i wyświetl</button>
 </section>
 <section id="wynik">
