--- a/Klasa 2/JavaScript/Zadania 00/Z 02 średnia arytmetyczna/index.html
+++ b/Klasa 2/JavaScript/Zadania 00/Z 02 średnia arytmetyczna/index.html
@@ -13,22 +13,8 @@
   <hr>
 </header>
 <section>
-  <script>
-    let a = prompt("Podaj liczbę a: ", "")
-    a = parseInt(a);
-    let b = prompt("Podaj liczbę b: ", "")
-    b = parseInt(b)
-    let c = prompt("Podaj liczbę c: ", "")
-    c = parseInt(c)
-    let d = prompt("Podaj liczbę d: ", "")
-    d = parseInt(d)
-
-    let suma = a+b+c+d;
-    let srednia = suma/4;
-    document.write("a wynosi: "+a+ "<br> b wynosi: "+b+"<br> c wynosi: "+c+"<br> d wynosi: "+d+"<br><b>Suma wynosi: "+suma+ "</b> <b><br>Srednia wynosi: "+srednia+ "</b> ")
-    document.write("<b><br>Srednia zaokrąglona wynosi: "+srednia.toFixed(2)+ "</b> ")
-    console.log(suma)
-  </script>
+    <script src="sredniarytmetyczna.js"></script>
+  <script src="main.js"></script>
 </section>
 </body>
 </html>
